[package]
name = "pyret-moss"
version = "0.1.0"
authors = ["Thomas Castleman", "Raj Paul"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# this allows us to selectively run print redirect tests
[features]
default=[]
test_redirects=[]

[dependencies]
lazy_static = "1.4.0"
regex = "1.3.9"
fnv = "1.0.7"
prettytable-rs = "0.8.0"
gag = "0.1.10"
ansi_term = "0.12.1"